<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

   			<ImageView
           		 	android:layout_width="130dp"
            		android:layout_height="200dp"
            		android:gravity="center_horizontal"
            		android:contentDescription="@string/application_image_description"
            		android:src="@drawable/recorder_image" />
	</LinearLayout>
    
    <Button
        android:id="@+id/record_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@android:drawable/btn_default"
        android:gravity="center"
        android:text="@string/record_button_text" />
        
    <Button
        android:id="@+id/file_manager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@android:drawable/btn_default"
        android:gravity="center"
        android:text="@string/manager_button_text" />
    
    <Button
        android:id="@+id/sound_player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@android:drawable/btn_default"
        android:gravity="center"
        android:text="@string/sound_player_button_text" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="end"
        android:textColor="#FEFEFE"
        android:gravity="bottom|center"
        android:layout_margin="5dp"
        android:text="@string/application_version" />

</LinearLayout>
