<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:contentDescription="@string/back_image"
        android:layout_margin="5dp"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#FEFEFE" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_margin="20dp"
        android:contentDescription="@string/micro_image"
        android:gravity="center_horizontal"
        android:src="@drawable/album" />
    
     <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        
        <ImageButton
        android:id="@+id/prev_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:contentDescription="@string/back_image"
        android:layout_margin="5dp"
        android:src="@drawable/prev" />
         
        <ImageButton
        android:id="@+id/play_pause_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:contentDescription="@string/back_image"
        android:layout_margin="5dp"
        android:src="@drawable/play" />
         
        <ImageButton
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:contentDescription="@string/back_image"
        android:layout_margin="5dp"
        android:src="@drawable/next" />
        
    </LinearLayout>
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >
     
    <TextView
        android:id="@+id/cur_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="#FEFEFE"
        android:text="@string/time" />
    
    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:text="@string/time"
        android:textColor="#FFFFFF" />
    
    </LinearLayout>
</LinearLayout>
